tests/baselines/reference/overloadModifiersMustAgree.errors.txt
==== tests/cases/compiler/overloadModifiersMustAgree.ts (4 errors) ====
    class baz {
        public foo();
        ~~~~~~~~~~~~~
!!! overloadModifiersMustAgree.ts(2,5): error TS2150: Overload signatures must all be public or private.
        private foo(bar?: any) { } // error - access modifiers do not agree
    }
    
    declare function bar();
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! overloadModifiersMustAgree.ts(6,1): error TS2152: Overload signatures must all be ambient or non-ambient.
    export function bar(s: string);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! overloadModifiersMustAgree.ts(7,1): error TS2151: Overload signatures must all be exported or not exported.
    function bar(s?: string) { }
    
    interface I {
        foo? ();
        foo(s: string);
        ~~~~~~~~~~~~~~
!!! overloadModifiersMustAgree.ts(12,5): error TS2153: Overload signatures must all be optional or required.
    }
    
    